# chromecast-poetry

./: LICENSE  README.md  pyproject.toml
src/simple_poetry/: simplecast.py  test_zeroconf.py  testssh.py
