[project]
name = "simple-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Xiao Cheng",email = "xiao.cheng@vizio.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pychromecast (>=14.0.7,<15.0.0)",
    "zeroconf (>=0.147.0,<0.148.0)",
    "paramiko (>=3.5.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "simple_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
simplecast = 'simple_poetry.simplecast:main'
testssh = 'simple_poetry.testssh:main'
zeroconf = 'simple_poetry.test_zeroconf:main'